--- a/Mapping.ipynb
+++ b/Mapping.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "fgp = folium.FeatureGroup(name = \"Population\")\n",
     "\n",
-    "'''Here we add a layer of... to the map, as well as open the world.json file,\n",
+    "'''Here we add a layer of polygons to the map, we then open the world.json file,\n",
     "which contains a range of info about the world from 2008, we then read the file\n",
     "and lastly differentiate the population of the map by colour '''\n",
     "\n",
